<resources>
    <string name="app_name">Tahminator</string>
    <string name="title_activity_signup">Create User</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="checkBoxString">Remember me</string>
    <string name="buttonString">Login</string>
    <string name="textViewUsername">Username:</string>
    <string name="textViewPassword">Password:</string>
    <string name="textViewSignUp">Sign Up!</string>
    <string name="buttonCreateAccountString">Create Account</string>
    <string name="usernameHintString">Username</string>
    <string name="passwordHintString">Password</string>
    <string name="usernameHintSUString">Username</string>
    <string name="passwordSUString">Password</string>
    <string name="confpasswordSUString">Confirm Password</string>
    <string name="emailSUString">E-Mail</string>
    <string name="menu_SignOutString">Sign Out</string>
</resources>
